# scaling

./: .gitignore  CLAUDE.md  Untitled.ipynb  Untitled1.ipynb  bm.sh  generate_experiment_scripts.py  launch_ablation.sh  launch_all_experiments.sh  notes.md  plots.ipynb  pyproject.toml  resume_curriculum.sh  resume_curriculum_2.sh  sliding-window.md  slurm-29912960.out  slurm-29917188.out  timing_comparison.py  tmp.py  train_d7_simple.ipynb
configs/: config.yaml  test_sweep.yaml
configs/experiment/: arch101_lr3e-4.yaml  arch_101.yaml  arch_101_down3.yaml  arch_101_downsample.yaml  arch_152.yaml  arch_18.yaml  arch_34.yaml  baseline.yaml  (+14 more)
experiments/: 101-filt.sh  50-filt-lstm-1gpu.sh  50-filt-lstm.sh  50-filt.sh  50-lowp.sh  arch_101.sh  arch_101_down3.sh  arch_101_downsample.sh  arch_101_lr3e-4.sh  arch_152.sh  arch_18.sh  arch_34.sh  baseline.sh  bb-curriculum.sh  d11-curriculum.sh  d13_adamw.sh  d13_schedulefree.sh  d15-curriculum.sh  d15-decay.sh  d19-curriculum.sh  d19-curriculum2.sh  d19-lowp.sh  d7-curriculum.sh  default-mult.sh  embed_128.sh  embed_256.sh  embed_32.sh  embed_512.sh  lr_1e3.sh  lr_1e4.sh  lr_3e3.sh  no-mult.sh  s3_both.sh  s3_spat.sh  s3_temp.sh  s4_both.sh  s4_spat.sh  s4_temp.sh  small-mult-big-emb.sh  small-mult.sh
src/: bb-test.ipynb  bb_dataset.py  bm.py  bm_samples.csv  color_dataset.py  data_module.py  dataset.py  dem.py  distance_curriculum.py  eval.py  model.py  mwpm.py  plots.ipynb  repitition.py  resnet.py  rgcn.py  samples_d13.csv  samples_d15.csv  samples_d19.csv  samples_d9.csv  samples_d9_highp.csv  stage_manager.py  train.py
(+32 files in other folders)
